Add DEVELOPMENT.md onboarding guide and mark Modernization Plan 3.1 complete